--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "devDependencies": {
         "@popperjs/core": "^2.10.2",
         "axios": "^0.21",
-        "bootstrap": "^5.1.3",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
         "postcss": "^8.1.14",
@@ -22,5 +21,11 @@
         "vue": "^2.6.12",
         "vue-loader": "^15.9.7",
         "vue-template-compiler": "^2.6.12"
+    },
+    "dependencies": {
+        "@fortawesome/fontawesome-free": "^6.1.1",
+        "bootstrap": "^5.1.3",
+        "bootstrap-icons": "^1.8.1",
+        "vuex": "^3.4.0"
     }
 }
